# rust_nif_example

./: .gitignore  LICENSE  README.md  rebar.config
apps/rs_compile_example/rust_files/: Cargo.toml  README.md
apps/rs_compile_example/rust_files/src/: lib.rs
apps/rs_compile_example/src/: rs_compile_example.app.src  rs_compile_example_add.erl  rs_compile_example_app.erl  rs_compile_example_sup.erl
apps/rustbar_example/rust_files/: Cargo.toml
apps/rustbar_example/rust_files/src/: lib.rs
apps/rustbar_example/src/: rustbar_example.app.src  rustbar_example_add.erl  rustbar_example_app.erl  rustbar_example_sup.erl
config/: sys.config  vm.args
