[package]
name = "rs_compile_example"
version = "0.1.0"
authors = ["joshragem <barney@whoop.com>"]

[lib]
name = "rs_compile_example_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies.rustler]
git = "https://github.com/hansihe/rustler"
[dependencies.rustler_codegen]
git = "https://github.com/hansihe/rustler"
